# GeneticML

./: .gitattributes  Cargo.toml  LICENSE  README.md
examples/: control_system.rs  random_number_guess.rs  timeseries_forecasting.rs  xornot.rs
src/: lib.rs  main.rs
src/examples/: control_systems.rs  mod.rs  random_number_guess.rs
src/genetic_training/: agent.rs  mod.rs  simulation.rs  training.rs
src/neuralnetwork/: activation.rs  layer.rs  linalgebra.rs  metrics.rs  mod.rs
