[package]
name = "genetic_rl"
version = "0.1.0"
edition = "2021"
authors = ["Benoit Fontannaz <benoit.fontzannaz@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rayon = "1.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0" 
plotters = "0.3.5"
